--- a/src/impl/js/proto/views/plotIndex2.html
+++ b/src/impl/js/proto/views/plotIndex2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>React Stockcharts - AreaChart Example</title>
+    <title>Plot View 2</title>
 
     <script type="text/javascript" src="/javascripts/d3/d3.min.js"></script>
     <script type="text/javascript" src="/javascripts/socket.io.js"></script>
