--- a/src/impl/js/proto/views/plotIndex.html
+++ b/src/impl/js/proto/views/plotIndex.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Plot View 1</title>
 
-    <script type="text/javascript" src="/javascripts/d3/d3.min.js"></script>
-    <script type="text/javascript" src="/javascripts/socket.io.js"></script>
-    <script type="text/javascript" src="/javascripts/react/react.min.js"></script>
-    <script type="text/javascript" src="/javascripts/react/react-dom.js"></script>
-    <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascripts/reactStockcharts/GPCCCM_L_CML_react-stockcharts.js"></script>
+    <script type="text/javascript" src="../public/javascripts/d3/d3.min.js"></script>
+    <script type="text/javascript" src="../public/javascripts/socket.io.js"></script>
+    <script type="text/javascript" src="../public/javascripts/react/react.min.js"></script>
+    <script type="text/javascript" src="../public/javascripts/react/react-dom.js"></script>
+    <script type="text/javascript" src="../public/javascripts/jquery.min.js"></script>
+    <script type="text/javascript" src="../public/javascripts/reactStockcharts/GPCCCM_L_CML_react-stockcharts.js"></script>
     <script type="text/javascript">
       d3.select(self.frameElement).style("height", "450px");
     </script>
@@ -18,7 +18,7 @@
     <div id="ui">
     </div>
     <div id="chart">
-	<script type="text/javascript" src="/javascripts/plotLibraryJs/GPCCCM_L_CML_plotLibrary.js"></script>
+	<script type="text/javascript" src="../public/javascripts/plotLibraryJs/GPCCCM_L_CML_plotLibrary.js"></script>
     </div> 
   </body>
 </html>
