[FT:#3622] update GPCCHS to handle multiple subscription

--- a/src/impl/js/proto/views/plotIndex3.html
+++ b/src/impl/js/proto/views/plotIndex3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Plot View ATT_BC_STR1VOLTAGE</title>
+    <title>Plot View ATT_BC_STR1STRSAQ1</title>
 
     <script type="text/javascript" src="../public/javascripts/d3/d3.min.js"></script>
     <script type="text/javascript" src="../public/javascripts/socket.io.js"></script>
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../public/javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="../public/javascripts/reactStockcharts/GPCCCM_L_CML_react-stockcharts.js"></script>
     <script type="text/javascript">
-      const paramName = 'ATT_BC_STR1VOLTAGE';
+      const paramName = 'ATT_BC_STR1STRSAQ1';
       d3.select(self.frameElement).style("height", "450px");
     </script>
   </head>
