--- a/src/impl/js/proto/views/plotIndex5.html
+++ b/src/impl/js/proto/views/plotIndex5.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Plot View FDS_DATA</title>
+    <title>Plot View Sub 5</title>
 
     <script type="text/javascript" src="../public/javascripts/d3/d3.min.js"></script>
     <script type="text/javascript" src="../public/javascripts/socket.io.js"></script>
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="../public/javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="../public/javascripts/reactStockcharts/GPCCCM_L_CML_react-stockcharts.js"></script>
     <script type="text/javascript">
-      const paramName = 'FDS_DATA';
+      // const paramName = 'FDS_DATA';
+      const subIds = ['sub5'];
       d3.select(self.frameElement).style("height", "450px");
     </script>
   </head>
