--- a/GPCCHS_E_CLT/src/impl/js/client/app/components/Buttons/SelectButton.css
+++ b/GPCCHS_E_CLT/src/impl/js/client/app/components/Buttons/SelectButton.css
@@ -1,1 +1,2 @@
-.xsmall{font-size:0.9em;line-height:14px;}
+.xsmall{font-size:0.9em;line-height:14px;width:25%;}
+.group{margin-bottom:2px;width:100%;}
