[FT:#3622] Introduce react-grid-layout and refactor project folders.

--- a/GPCCHS_E_CLT/src/impl/js/client/app/window/global.css
+++ b/GPCCHS_E_CLT/src/impl/js/client/app/window/global.css
@@ -2,6 +2,8 @@ body {
   position: relative;
   height: 100vh;
   font-family: Arial, Helvetica, Helvetica Neue;
+  background-color: #F1F1F1;
+  color: #222;
 }
 
 h2 {
