[FT:#3622] implements dialog box on click menu

--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/Page/Page.css
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/Page/Page.css
@@ -3,3 +3,25 @@
   border: 2px solid grey;
   overflow: auto;
 }
+
+.nopage_background {
+  background-color:white;
+  width: 900px;
+  height: 1400px;
+  min-width: 100%;
+  margin-bottom: 50vh;
+  position: absolute;
+}
+.nopage_transbox{
+  background-color: darkgray;
+  margin: 300px;
+  border: 1px solid black;
+  opacity: 0.2;
+  /*-webkit-transform:rotate(-350deg);*/
+}
+.nopage_transbox  p{
+  font-family: Arial;
+  text-align: center;
+  font-size: 100px;
+  color: black;
+}
