[FT:#3622]Fixed the issues with editor closing event

--- a/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/Page/Page.css
+++ b/GPCCHS_E_CLT/src/client/src/impl/js/client/app/window/Page/Page.css
@@ -3,3 +3,9 @@
   border: 2px solid grey;
   overflow: auto;
 }
+
+.blockedited {
+  background-color: white;
+  border: 2px solid red;
+  overflow: auto;
+}
