[FT:#3622] Fix view content overflow on HSC

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/View.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/View.css
@@ -1,5 +1,11 @@
 .container {
-  text-align: center;
-  color: dimgray;
+  height: 100%;
+  position: relative;
+  padding-top: 25px;
+  overflow: hidden;
 }
-
+.content {
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
