--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Navigation/Tabs.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Navigation/Tabs.css
@@ -1,12 +1,9 @@
 .title {
-  padding-right: 15px;
   color: #708090;
   font-weight: bold;
 
 }
 
-.close-button {
-  position: absolute;
-  right: 8px;
-  top: 11px;
+.close {
+  padding: 5px;
 }
