--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/Header.css
@@ -1,39 +1,19 @@
 .container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  display: flex;
+  background-color: #CCC;
 }
-
-.bar {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #d2d2d2;
-  border-bottom-style: inset;
-  border-color: #858585;
-  border-width: 2px;
-  height: 20px;
+.title {
+  display: inline-block;
+  flex-grow: 100;
+  line-height: 2;
+  padding-left: 5px;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
-
-.item {
-  float: left;
-  display: block;
+.menu {
+  display: inline-block;
+  flex-grow: 1;
   text-align: center;
-  padding: 2px 5px;
-  color: black;
-  font-size: 11px;
-  text-decoration: none;
-}
-
-.close {
-  float: right;
-  position: absolute;
-  cursor: pointer;
-  right: 0;
-  padding: 0 5px;
-}
-
-.right {
-  padding: 0 5px;
+  padding: 3px;
 }
