--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/global.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/global.css
@@ -1,6 +1,9 @@
+html, body, body > div{
+  height: 100%;
+}
+
 body {
   position: relative;
-  height: 100vh;
   font-family: Arial, Helvetica, Helvetica Neue;
   background-color: #F1F1F1;
   color: #222;
