--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -58,7 +58,7 @@
     left: -5px;
 }
 
-.lowerFormattedTime, .upperFormattedTime, .timeBeginning, .timeEnd{
+.lowerFormattedTime, .upperFormattedTime, .currentFormattedTime, .timeBeginning, .timeEnd{
     font-size: 0.9em;
     font-weight: bold;
     top: -14px;
@@ -82,6 +82,12 @@
 .upperFormattedTime{
     right: 0;
     transform: translateX(50%);
+}
+.currentFormattedTime{
+    color: #812;
+    white-space: nowrap;
+    z-index: 2;
+    transform: translateX(-50%);
 }
 .arrowLeft, .arrowRight{
     z-index: 11;
