[FT:#3622] Timebar: corrections, eslint corrections, drag with the current cursor. v0.5.5 .

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -1,7 +1,6 @@
 .viewportWrapper{
     padding-top: 18px;
-    overflow: hidden;
-    height: 100%;
+    overflow: hidden
 }
 .viewportContainer{
     min-height: 100px;
