--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -1,11 +1,11 @@
 .form{
   position: absolute;
-  right: 0;
+  right: 13px;
   top: 0;
   transform: translate(calc(100% - 32px), calc(-100% + 34px));
   background: #fff;
   border: 1px solid #ccc;
-  border-radius: 2px;
+  border-radius: 1px;
   box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
   z-index: 10;
   width: 260px;
@@ -18,15 +18,14 @@
 
 .timeline{
   position: relative;
-  background: #B5F;
+  background: #efefef;
+  border: 1px solid #bbb;
   font-size: 0.8em;
   font-weight: 500;
   padding: 2px 4px;
   margin-bottom: 2px;
   padding: 6px 4px;
-  color: #fff;
   font-weight: bold;
-  text-shadow: 0px 0px 1px #222, 0px 0px 6px rgba(0,0,0,0.5);
 }
 
 .formGroup{
@@ -36,8 +35,10 @@
 .addTimelineButton{
   z-index: 11;
   position: absolute;
-  top: 0px;
-  right: 0px;
+  top: 6px;
+  right: 18px;
+  padding: 2px 7px;
+  border-radius: 1px;
 }
 
 .labelFormControl{
@@ -55,13 +56,20 @@
   background: #444;
   cursor: pointer;
   color: #fff;
-  padding: 4px 11px;
-  border-radius: 2px;
+  padding: 4px 9px;
+  border-radius: 1px;
   position: absolute;
   top: 2px;
   right: 2px;
-  width: 10px;
   text-align: center;
+}
+.square{
+  position: absolute;
+  top: 2px;
+  right: 26px;
+  width: 23px;
+  height: 23px;
+  border-radius: 1px;
 }
 .deleteButton:hover{
   background: #222;
