--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -94,6 +94,7 @@
     color: #fff;
     background: #444;
     border-radius: 2px;
+    border: none;
     top: 5px;
     width: 20px;
     height: 15px;
