--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -92,15 +92,17 @@
     z-index: 11;
     position: absolute;
     color: #fff;
+    background: #444;
     border-radius: 2px;
     border: none;
     top: 5px;
     width: 20px;
     height: 15px;
     cursor: pointer;
-    box-shadow: 0px 0px 5px #666;
 }
-
+.arrowLeft:hover, .arrowRight:hover{
+    background: #333;
+}
 .arrowLeft{
     left: 7px;
 }
