[FT:#3622] Timebar : Increase / Decrease playing speed.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarControls.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarControls.css
@@ -7,10 +7,13 @@
   display: table-cell;
 }
 .controlButton{
+  min-width: 30px;
   margin-right: 5px;
   border-radius: 1px;
   height: 19px;
   line-height: 1px;
+  font-weight: 600;
+  font-size: 0.8em;
 
 }
 .controlButtonPause{
