[HL] refactor Editor to use new conventions

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/EntryPointActions.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/EntryPointActions.css
@@ -1,2 +1,7 @@
-.noPaddingLeft{padding-left: 0px !important;}
-.noPadding{padding: 0px !important}
+.noPaddingLeft {
+  padding-left: 0px !important;
+}
+
+.noPadding {
+  padding: 0px !important
+}
