--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Buttons/SelectButton.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Buttons/SelectButton.css
@@ -1,2 +1,10 @@
-.xsmall{font-size:0.9em;line-height:14px;width:25%;}
-.group{margin-bottom:2px;width:100%;}
+.xsmall {
+  font-size: 0.9em;
+  line-height: 14px;
+  width: 25%;
+}
+
+.group {
+  margin-bottom: 2px;
+  width: 100%;
+}
