--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/EntryPointTree.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/EntryPointTree.css
@@ -1,2 +1,7 @@
-.entryPointsTree {margin: 0px 0px 0px 10px;}
-.addEntryPoint{margin-top:20px;}
+.entryPointsTree {
+  margin: 0px 0px 0px 10px;
+}
+
+.addEntryPoint {
+  margin-top: 20px;
+}
