--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Select.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Select.css
@@ -1,1 +1,6 @@
-.xsmall{font-weight:bold;padding:1px 6px 1px 6px;font-size:0.9em;height:auto;}
+.xsmall {
+  font-weight: bold;
+  padding: 1px 6px 1px 6px;
+  font-size: 0.9em;
+  height: auto;
+}
