--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/SelectFontStyle.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/SelectFontStyle.css
@@ -1,2 +1,13 @@
-.formLabel{vertical-align:middle;margin-bottom:0px !important;text-align:left !important;padding-top:1px !important;font-weight:bold;font-size:0.9em;color:#333;}
-.formGroupXsmall{margin-bottom:10px !important;}
+.formLabel {
+  vertical-align: middle;
+  margin-bottom: 0px !important;
+  text-align: left !important;
+  padding-top: 1px !important;
+  font-weight: bold;
+  font-size: 0.9em;
+  color: #333;
+}
+
+.formGroupXsmall {
+  margin-bottom: 10px !important;
+}
