[FT:#3622] Modale to set cursors manually. use of the classNames module. navigate with or without ctrl in viewport.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -13,16 +13,22 @@
 .viewport{
     top: 0px;
     position: absolute;
-    background-color: rgba(49, 126, 249,0.3);
+    background: rgba(200, 126, 249,0.3);
     height: 100%;
     cursor: pointer;
 }
 .viewportDragging{
-    background-color: rgba(49, 126, 249,0.5);
+    background-color: rgba(200, 126, 209, 0.6);
     cursor: move;
 }
 .viewportResizing{
-    background-color: rgba(49, 166, 249,0.5);
+    background-color: rgba(200, 126, 209, 0.6);
+}
+.formatedFullDate{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -15px;
 }
 .lower, .upper, .current{
     cursor: col-resize;
@@ -35,17 +41,17 @@
 }
 .lower{
     left: 0px;
-    border-left: 1px solid #4c96ff;
+    border-left: 1px solid #E45;
 }
 .upper{
     right: 0px;
-    border-right: 1px solid #4c96ff;
+    border-right: 1px solid #E45;
 }
 .lower:before, .upper:before{
     width: 10px;
     height: 10px;
     content: '≡';
-    color: #4c96ff;
+    color: #E45;
     transform: rotate(90deg);
     position: absolute;
     top: 48%;
