--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarScale.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarScale.css
@@ -2,7 +2,8 @@
   position: relative;
   background-color: #FFF;
   height: 20px;
-
+  border: 1px solid #aaa;
+  border-top: none;
 }
 .scale{
   position: absolute;
@@ -13,9 +14,7 @@
   left:0;
   top: 4px;
   font-size: 0.8em;
-  font-weight: bold;
   transform: translateX(-50%);
-  background-color: #fff;
   text-align: center;
   width: 40px;
   z-index: 3;
@@ -23,7 +22,7 @@
 .scaleBar{
   cursor: col-resize;
   position: absolute;
-  height: 100%;
+  height: 4px;
   width: 1px;
   border-left: 1px solid #aaa;
 }
