--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/bootstrap.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/bootstrap.less
@@ -1,5 +1,6 @@
 // Core variables and mixins
 @import "~bootstrap/less/variables.less";
+@import "./variables.less";
 @import "~bootstrap/less/mixins.less";
 // Reset and dependencies
 @import "~bootstrap/less/normalize.less";
