[HL] Simplify PlotEditor and prepare to dispach actions ;)

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/variables.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/variables.less
@@ -1,3 +1,5 @@
+// https://github.com/twbs/bootstrap/blob/v3.3.7/less/variables.less
+
 @border-radius-base: 0px;
 @border-radius-large: 0px;
 @border-radius-small: 0px;
