--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarControls.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarControls.css
@@ -35,3 +35,9 @@
   box-shadow: 0px 0px 6px #337ab7 inset;
   border: 1px solid #337ab7;
 }
+.controlButtonActive, .controlButtonActive:hover{
+  background: #60a7e5;
+  box-shadow: 0px 0px 6px #337ab7 inset;
+  border: 1px solid #337ab7;
+  cursor: default;
+}
