--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarControls.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarControls.css
@@ -3,6 +3,11 @@
   margin: 0px;
   padding: 0px;
 }
+.controlsUlRight{
+  position: absolute;
+  top: 0px;
+  right: 15px;
+}
 .controlsLi{
   display: table-cell;
 }
