[FT:#3622] Workspace can be launched without timelines. restyled TimebarControls, decreased Timebar height.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -159,6 +159,7 @@
     font-size: 1.2em;
     background-color: #F1F1F1;
     transform: translateX(-50%);
+    z-index: 4;
 }
 .resizingTimebarContainer:before{
   color: #555;
