[HL] refactor entryPoint components and create EntryPointStyle and EntryPointStateColours

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/variables.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/variables.less
@@ -6,3 +6,10 @@
 
 //== Grid system
 @grid-gutter-width: 10px;
+
+
+//== Navs
+@nav-link-padding: 5px 10px;
+
+//== Panels
+@panel-body-padding: 5px;
