--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Buttons/SelectButton.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Buttons/SelectButton.css
@@ -1,10 +1,11 @@
-.xsmall {
-  font-size: 0.9em;
-  line-height: 14px;
-  width: 25%;
+.root {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
-.group {
-  margin-bottom: 2px;
-  width: 100%;
+.button {
+  font-size: 0.9em;
+  line-height: 14px;
+  flex: 1;
 }
