--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/index.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/index.less
@@ -1,6 +1,7 @@
 // Core variables and mixins
 @import "~bootstrap/less/variables.less";
 @import "./variables.less";
+@import "./overwrite.less";
 @import "~bootstrap/less/mixins.less";
 // Reset and dependencies
 @import "~bootstrap/less/normalize.less";
@@ -28,7 +29,7 @@
 // @import "~bootstrap/less/badges.less";
 // @import "~bootstrap/less/jumbotron.less";
 // @import "~bootstrap/less/thumbnails.less";
-// @import "~bootstrap/less/alerts.less";
+@import "~bootstrap/less/alerts.less";
 // @import "~bootstrap/less/progress-bars.less";
 // @import "~bootstrap/less/media.less";
 @import "~bootstrap/less/list-group.less";
