[FT:#3622] 3 modes working Normal/Extensible/Fixed. general code / variables review. Right usage of timebar.slideWindow, timebar.resolution ...

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timesetter.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timesetter.css
@@ -38,7 +38,7 @@
 .formLabelcurrent{
   color: var(--currentCursorColor);
 }
-.formLabelextUpperBound{
+.formLabelslideLower, .formLabelslideUpper{
   color: var(--extCursorColor);
 }
 .inputDiv{
