--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -5,7 +5,7 @@
     overflow: hidden
 }
 .viewportContainer{
-    min-height: 100px;
+    min-height: 55px;
     position: relative;
     background: #fff;
     border: 1px solid #ccc;
@@ -32,7 +32,7 @@
   transform: translateX(-50%);
   top: -15px;
 }
-.lower, .upper, .current, .extUpperBound{
+.lower, .upper, .current, .extBound{
     cursor: col-resize;
     position: absolute;
     height: 100%;
@@ -49,7 +49,7 @@
     right: 0px;
     border-right: 1px solid var(--boundCursorsColor);
 }
-.extUpperBound{
+.extBound{
     right: 0px;
     border-right: 1px solid var(--extCursorColor);
 }
@@ -178,7 +178,7 @@
   color: #555;
 }
 .timelines{
-  max-height: 150px;
+  max-height: 100px;
   overflow-y: auto;
 }
 .timeline{
