--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -1,5 +1,6 @@
 .leftTab{
   position: relative;
+  height: 100%;
 }
 .timebarName{
   position: absolute;
@@ -17,7 +18,7 @@
   border: 1px solid #ccc;
   border-radius: 1px;
   box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
-  z-index: 2;
+  z-index: 4;
   width: 260px;
   padding: 4px;
 }
@@ -31,7 +32,8 @@
 .timelineUl{
   margin-top: 28px;
   padding-left: 0px;
-  max-height: 100px;
+  height: 100%;
+  max-height: calc(100% - 80px);
   overflow-y: auto;
 }
 .timeline{
