[FT:#3622] Displaying timeline's offset correctly. Adding security checks to shortcuts actions.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -22,6 +22,10 @@
   width: 260px;
   padding: 4px;
 }
+.offset{
+  position: absolute;
+  right: 40px;
+}
 .editForm{
   right: auto;
   left: 0px;
