--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -4,10 +4,17 @@
 }
 .timebarName{
   position: absolute;
-  top: -20px;
-  left: 0px;
+  top: -24px;
+  left: 25px;
   margin-top: 0px;
-
+}
+.btnClose{
+  position: absolute;
+  left: 0px;
+  top: -26px;
+  width: 20px;
+  min-width: 20px;
+  height: 20px;
 }
 .form{
   position: absolute;
