--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Navbar/Navbar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Editor/Components/Navbar/Navbar.css
@@ -1,11 +1,11 @@
 .root{
   > li {
     &:first-child a{
-      border-left: 0px;
+      border-left: 0px !important;
     }
     &:last-child a{
-      border-right: 0px;
-      margin-right: 0px;
+      border-right: 0px !important;
+      margin-right: 0px !important;
     }
   }
 }
