--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Lefttab.css
@@ -70,11 +70,14 @@
   margin-bottom: 4px;
 }
 
+.hideAddTimelineButton{
+  padding: 2px 10px;
+}
 .addTimelineButton{
   position: absolute;
   top: -28px;
   right: 0px;
-  padding: 2px 7px;
+  padding: 2px 8px;
   border-radius: 1px;
 }
 
@@ -104,7 +107,6 @@
 .square{
   position: absolute;
   top: 0px;
-  right: 16px;
   width: 17px;
   height: 17px;
 
@@ -114,6 +116,11 @@
 }
 .addTrackButton{
   border: none;
+  bottom: 5px;
+  top: auto;
+  left: 5px;
+  right: auto;
+  padding: 2px 8px;
 }
 .input{
   padding: 2px 7px;
