[FT:#3622] Refactor Axes component so it add/update/remove by itself

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/overwrite.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/overwrite.less
@@ -2,6 +2,16 @@
 	overflow: hidden;
 	white-space: nowrap;
   text-overflow: ellipsis;
+	padding: 0 !important;
+	> h4 {
+		display: flex;
+	}
+	a[role="tab"] {
+		display: flex;
+		flex-direction: row;
+		width: 100%;
+		padding: @panel-heading-padding;
+	}
 }
 .form-horizontal{
 	.control-label {
