[FT:#3622] Added a constant for max visuWindow length. Added handles on cursors when they are too close to eacht other.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timebar.css
@@ -33,43 +33,95 @@
   left: 50%;
   transform: translateX(-50%);
 }
-.lower, .upper, .current, .extBound{
+
+/*
+  Cursors
+*/
+.lower, .upper, .current, .slide{
     cursor: col-resize;
     position: absolute;
     height: 100%;
     width: 3px;
-}
-.current{
-  border-left: 2px solid var(--currentCursorColor);
-}
-.lower{
-    left: 0px;
-    border-left: 1px solid var(--boundCursorsColor);
-}
-.upper{
-    right: 0px;
-    border-right: 1px solid var(--boundCursorsColor);
-}
-.extBound{
-    right: 0px;
-    border-right: 1px solid var(--extCursorColor);
-}
-.lower:before, .upper:before{
-    width: 10px;
-    height: 10px;
-    content: '≡';
-    color: #E45;
-    transform: rotate(90deg);
-    position: absolute;
-    top: 48%;
-}
-.lower:before{
-    left: 5px;
-}
-.upper:before{
-    left: -5px;
+    &.current{
+      border-left: 2px solid var(--currentCursorColor);
+    }
+    &.lower{
+        left: 0px;
+        border-left: 1px solid var(--boundCursorsColor);
+    }
+    &.upper{
+        right: 0px;
+        border-right: 1px solid var(--boundCursorsColor);
+    }
+    &.slide{
+        right: 0px;
+        border-right: 1px solid var(--slideCursorColor);
+    }
+    &.lower:before, .upper:before{
+        width: 10px;
+        height: 10px;
+        content: '≡';
+        color: #E45;
+        transform: rotate(90deg);
+        position: absolute;
+        top: 48%;
+    }
+    &.lower:before{
+        left: 5px;
+    }
+    &.upper:before{
+        left: -5px;
+    }
 }
 
+
+
+/*
+  Handles
+*/
+.handle{
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 12;
+  cursor: pointer;
+  filter: brightness(0.9);
+  &:hover{
+    filter: brightness(0.8);
+  }
+  &.undisplayed {
+    display: none;
+  }
+  transition: width 0.1s;
+  transition: height 0.1s;
+  &.handleLower, &.handleUpper{
+    top: 5px;
+    background: var(--boundCursorsColor);
+    &.handleLower{
+      left: 0px;
+      transform: translateX(-50%);
+    }
+    &.handleUpper{
+      right: 0px;
+      transform: translateX(50%);
+    }
+  }
+  &.handleCurrent{
+    top: 22px;
+    background: var(--currentCursorColor);
+    transform: translateX(-40%);
+  }
+  &.handleSlideLower, &.handleSlideUpper{
+    top: 34px;
+    background: var(--slideCursorColor);
+    transform: translateX(-25%);
+  }
+}
+
+/*
+  Formatted Times
+*/
 .lowerFormattedTime, .upperFormattedTime, .currentFormattedTime, .slideLower, .slideUpper{
     font-size: 0.9em;
     font-weight: bold;
@@ -85,13 +137,14 @@
     top: -28px;
     font-size: 0.8em;
     color: rgba(0,0,0,0.6);
+    &.slideLower{
+        left: 4px;
+    }
+    &.slideUpper{
+        right: 4px;
+    }
 }
-.slideLower{
-    left: 4px;
-}
-.slideUpper{
-    right: 4px;
-}
+
 .lowerFormattedTime{
     transform: translateX(-50%);
 }
