--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/variables.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/variables.css
@@ -2,7 +2,7 @@
   --mainColor: green;
   --currentCursorColor: #1E2;
   --boundCursorsColor: #E45;
-  --extCursorColor: #45E;
+  --slideCursorColor: #45E;
 }
 
 /*
