--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timesetter.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/Timesetter.css
@@ -12,7 +12,7 @@
   border: 1px solid #aaa;
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
   border-radius: 2px;
-  z-index: 5;
+  z-index: 15;
 }
 .fieldsContainer{
   padding: 4px 6px;
@@ -39,7 +39,7 @@
   color: var(--currentCursorColor);
 }
 .formLabelslideLower, .formLabelslideUpper{
-  color: var(--extCursorColor);
+  color: var(--slideCursorColor);
 }
 .inputDiv{
   display: inline-block;
