[FT:#3622] Adding the same close button on EditTrack and AddTrack, correcting a handle error.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/buttons.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/buttons.css
@@ -32,3 +32,10 @@
     border: 1px solid #337ab7;
   }
 }
+.btn-close{
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  z-index: 2;
+  font-weight: 600;
+}
