--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/overwrite.less
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/style/bootstrap/overwrite.less
@@ -21,3 +21,9 @@
 	}
 }
 
+.modal-container {
+  position: relative;
+}
+.modal-container .modal, .modal-container .modal-backdrop {
+  position: absolute;
+}
