[FT:#3622] Corrected precision on timescale low values.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarScale.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Timebar/TimebarScale.css
@@ -1,11 +1,15 @@
-.timebarRule{
-  position: relative;
+.timebarRuleContainer{
+  overflow: hidden;
   background-color: #FFF;
   height: 20px;
   border: 1px solid #aaa;
   border-top: none;
+}
+.timebarRule{
+  position: relative;
+  border-top: none;
+  height: 20px;
   cursor: col-resize;
-  overflow: hidden;
 }
 .scale{
   position: absolute;
