--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Page/Content.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Page/Content.css
@@ -1,3 +1,5 @@
+@import '../style/variables';
+
 .block {
   background-color: white;
   border: 2px solid #CCC;
@@ -7,8 +9,9 @@
 
 .blockedited {
   background-color: white;
-  border: 2px solid red;
+  border: 2px solid var(--brand-primary);
   overflow: auto;
+  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
 
 .noPage {
