--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/View/Header.css
@@ -1,8 +1,16 @@
+@import '../style/variables';
+
 .container {
   width: 100%;
   height: 28px;
   display: flex;
   background-color: #CCC;
+}
+.containerActive {
+  background-color: var(--brand-primary);
+  > *, button {
+    color: white !important;
+  }
 }
 .title {
   display: inline-block;
@@ -10,10 +18,4 @@
   line-height: 2;
   padding-left: 5px;
   font-size: 1.3rem;
-}
-.menu {
-  display: inline-block;
-  flex-grow: 1;
-  text-align: center;
-  padding: 3px;
 }
