--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/lib/windowProcess/Window/Window.css
@@ -10,11 +10,11 @@
 }
 
 .content{
-  padding: 10px;
-  overflow: auto;
+  padding: 10px 5px;
   display: flex;
   flex: 1 1 100%;
   flex-direction: column;
+  position: relative;
 }
 
 .box {
